# actix-auth

./: Cargo.toml  LICENSE  README.md
migrations/: 20250525153741_users_table.up.sql
src/: config.rs  handler.rs  logs.rs  main.rs
src/connections/: postgres.rs
